# sphinx-gooey

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  cspell.json  pyproject.toml  test.py
doc/: api.md  conf.py  index.md
doc/examples/: example.md  index.md
doc/examples/cxx/demo/: demo.cpp
doc/examples/jupyter/: notebook_example.ipynb  notebook_example.md
doc/examples/python/subfolder/: example2.py
doc/examples/subfolder/: example2.md
examples/jupyter/: notebook_example.ipynb
examples/python/: example.py
examples/python/subfolder/: index.md
src/sphinx_gooey/: __init__.py  default.py  directives.py  gooey.py  jupyter.py  jupyter_directives.py  python.py  readers.py
tests/: test_python.py
